Add general API features
