# api/docs/swagger.yaml
@@ -30,13 +30,24 @@ definitions:
     type: object
   main.groupGetResponse:
     properties:
+      description:
+        type: string
       id:
         type: integer
       name:
         type: string
     type: object
+  main.userBioRequest:
+    properties:
+      bio:
+        type: string
+      token:
+        type: string
+    type: object
   main.userGetResponse:
     properties:
+      bio:
+        type: string
       display_name:
         type: string
       groups:
@@ -203,28 +214,26 @@ paths:
       summary: Get group
       tags:
       - group
-  /user/Register:
+  /user/bio:
     post:
-      description: Registers a new user given the provided arguments
+      description: Updates a user's bio
       parameters:
-      - description: User registration information
+      - description: User token and new bio
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/main.userRegisterRequest'
+          $ref: '#/definitions/main.userBioRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
-          schema:
-            $ref: '#/definitions/main.userRegisterResponse'
         "400":
           description: Bad Request
         "500":
           description: Internal Server Error
-      summary: Register a new user
+      summary: Updates bio
       tags:
       - user
   /user/get/{ident}:
@@ -248,6 +257,30 @@ paths:
         "500":
           description: Internal Server Error
       summary: Fetch user
+      tags:
+      - user
+  /user/register:
+    post:
+      description: Registers a new user given the provided arguments
+      parameters:
+      - description: User registration information
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/main.userRegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.userRegisterResponse'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Register a new user
       tags:
       - user
 swagger: "2.0"
